# var-config

./: LICENSE  README.md  test.cfg  var-config.cabal
.stack-work/ghci/360dd313/: cabal_macros.h
.stack-work/install/x86_64-linux/lts-13.11/8.6.4/flag-cache/: var-config-0.1.0.0
src/: Main.hs
