name:                var-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pixlark/var-config#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Tilley
maintainer:          t1000.pixlark@gmail.com
copyright:           (c) 2019 Paul Tilley
category:            Program
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable var-config
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers
